@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity party_contact_mechanism {}
entity contact_mechanism {}
entity party {}
entity party_contact_mechanism_purpose {}
entity contact_mechanism_type {}
entity party_contact_mechanism_purpose_type {}

party_contact_mechanism }|..|| contact_mechanism
party_contact_mechanism }|..|| party
party_contact_mechanism ||..|{ party_contact_mechanism_purpose

contact_mechanism }|..|| contact_mechanism_type
party_contact_mechanism_purpose }|..|| party_contact_mechanism_purpose_type


@enduml
